# football-analytics-research

./: .gitignore  DATA_MODEL.md  README.md  pyproject.toml
data/mapping/: opta-events.js  opta-qualifiers.js
data/processed/: eventing-alaves_espanyol.csv
data/raw/: alaves_espanyol
md/: MODEL_UPDATE.md
notebooks/: eventing_processing.ipynb  test.ipynb
src/bronze/: load_match_lineups.py  load_matches.py  load_teams_silver.py  parse_teams_bronze.py
src/bronze/events/: load_events.py  run_events.py
src/bronze/squads/: __main__.py  db.py  scanner.py
src/gold/: gold_sequences.py
src/silver/: load_match_lineups.py  load_teams.py
src/silver/events/: __main__.py  carries.py  db.py  parser.py  processor.py  sequences.py  xt.py
src/silver/squads/: models.py  parser.py  preflight_squads.py  squad_processor.py  validator.py
